src/objects/Retail_Price_Book_Line__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Price Book Lines</relationshipLabel>
        <relationshipName>Retail_Price_Book_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <inlineHelpText>The business to which this product belongs to.</inlineHelpText>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Handset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companion Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>AAT BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVANTEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bell Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSUMER CELLULAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA COMMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>METROPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOTOROLA ISRAEL MCIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL-ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL-BRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL CHILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL-MEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL-PERU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTHERN LINC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELUS CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracfone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Concatenated field: Part Number - Customer Number - Carrier Code.
Delimiter &quot;-&quot;</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MSRP__c</fullName>
        <description>Manufacturer Suggested Retail Price</description>
        <inlineHelpText>Manufacturer Suggested Retail Price</inlineHelpText>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Retail Price Book Lines</relationshipLabel>
        <relationshipName>Retail_Price_Book_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1_ASP__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>First quarter: Average Selling Price</inlineHelpText>
        <label>Q1 ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_MCPU__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>First quarter: Motorola Cost Per Unit</inlineHelpText>
        <label>Q1 MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_ASP__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Second quarter: Average Selling Price</inlineHelpText>
        <label>Q2 ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_MCPU__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Second quarter: Motorola Cost Per Unit</inlineHelpText>
        <label>Q2 MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_ASP__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Third quarter: Average Selling Price</inlineHelpText>
        <label>Q3 ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_MCPU__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Third quarter: Motorola Cost Per Unit</inlineHelpText>
        <label>Q3 MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Price_Book__c</fullName>
        <label>Retail Price Book</label>
        <referenceTo>Retail_Price_Book__c</referenceTo>
        <relationshipLabel>Retail Price Book Lines</relationshipLabel>
        <relationshipName>Retail_Price_Book_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Retail Price Book Line</label>
    <nameField>
        <displayFormat>PBL-{0000000}</displayFormat>
        <label>Retail Price Book Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Price Book Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>